[package]
name = "Rust_Async_Tokio_ChatServer"
version = "0.1.0"
edition = "2021"
authors =["Linux-Server(sachin)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
mini-redis = "0.4.1"
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread", "time", "net"] }



